// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pricing page snapshot 1`] = `
Array [
  <div
    className="pricing_content"
  >
    <div
      class="pricing-header px-3 py-3 pb-md-4 mx-auto text-center"
    >
      <h3
        class="keep_it_healthy"
      >
        <div
          className="sc-Axmtr cywPjI rect"
          height="24px"
          style={
            Object {
              "margin": "auto",
              "marginTop": 48,
            }
          }
          width="200px"
        />
      </h3>
      <h1
        class="simple_fair"
      >
        <div
          className="sc-Axmtr gVCGBX rect"
          height="64px"
          style={
            Object {
              "margin": "auto",
            }
          }
          width="680px"
        />
      </h1>
      <p
        class="lead simple_healthy"
      >
        <div
          className="sc-Axmtr cTjbSv rect"
          height="18px"
          style={
            Object {
              "margin": "auto",
            }
          }
          width="480px"
        />
      </p>
    </div>
    <div
      class="container"
    >
      <div
        class="card-deck mb-3 text-center"
      >
        <div
          class="card mb-4 shadow-sm pricing_card_1"
        >
          <div
            class="card-body"
          >
            <div
              className="sc-Axmtr cXjICw circle"
              height="136px"
              style={
                Object {
                  "margin": "auto",
                  "marginTop": 48,
                }
              }
              width="136px"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              <div
                className="sc-Axmtr bzthWX rect"
                height="16px"
                width="100%"
              />
            </h4>
            <p
              className="plan_card_content"
            >
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
            </p>
            <div
              className="sc-Axmtr bHUYsc rect"
              height="48px"
              width="100%"
            />
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    width="80px"
                  />
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    style={
                      Object {
                        "marginLeft": 4,
                      }
                    }
                    width="80px"
                  />
                </div>
              </div>
            </div>
            <div
              className="sc-Axmtr cudNOq rect"
              height="53px"
              width="100%"
            />
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_2"
        >
          <div
            class="card-body"
          >
            <div
              className="sc-Axmtr cXjICw circle"
              height="136px"
              style={
                Object {
                  "margin": "auto",
                  "marginTop": 64,
                }
              }
              width="136px"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              <div
                className="sc-Axmtr cGrUAy rect"
                height="24px"
                width="100%"
              />
            </h4>
            <p
              className="plan_card_content"
            >
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
            </p>
            <div
              className="sc-Axmtr bHUYsc rect"
              height="48px"
              width="100%"
            />
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    width="80px"
                  />
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    style={
                      Object {
                        "marginLeft": 4,
                      }
                    }
                    width="80px"
                  />
                </div>
              </div>
            </div>
            <div
              className="sc-Axmtr cudNOq rect"
              height="53px"
              width="100%"
            />
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_3"
        >
          <div
            class="card-body"
          >
            <div
              className="sc-Axmtr cXjICw circle"
              height="136px"
              style={
                Object {
                  "margin": "auto",
                  "marginTop": 64,
                }
              }
              width="136px"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              <div
                className="sc-Axmtr cGrUAy rect"
                height="24px"
                width="100%"
              />
            </h4>
            <p
              className="plan_card_content"
            >
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
            </p>
            <div
              className="sc-Axmtr bHUYsc rect"
              height="48px"
              width="100%"
            />
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    width="80px"
                  />
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    style={
                      Object {
                        "marginLeft": 4,
                      }
                    }
                    width="80px"
                  />
                </div>
              </div>
            </div>
            <div
              className="sc-Axmtr cudNOq rect"
              height="53px"
              width="100%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="background_blue"
  />,
  <div
    className="background_white"
  />,
]
`;

exports[`Pricing page snapshot 2`] = `
Array [
  <div
    className="pricing_content"
  >
    <div
      class="pricing-header px-3 py-3 pb-md-4 mx-auto text-center"
    >
      <h1
        class="simple_fair"
      >
        <div
          className="sc-Axmtr jwprPE rect"
          height="40px"
          style={
            Object {
              "margin": "auto",
            }
          }
          width="100%"
        />
      </h1>
      <p
        class="lead simple_healthy"
      >
        <div
          className="sc-Axmtr bZeZrl rect"
          height="18px"
          style={
            Object {
              "margin": "auto",
            }
          }
          width="100%"
        />
      </p>
    </div>
    <div
      class="container"
    >
      <div
        class="card-deck mb-3 text-center"
      >
        <div
          class="card mb-4 shadow-sm pricing_card_1"
        >
          <div
            class="card-body"
          >
            <div
              className="sc-Axmtr cXjICw circle"
              height="136px"
              style={
                Object {
                  "margin": "auto",
                  "marginTop": 48,
                }
              }
              width="136px"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              <div
                className="sc-Axmtr bzthWX rect"
                height="16px"
                width="100%"
              />
            </h4>
            <p
              className="plan_card_content"
            >
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
            </p>
            <div
              className="sc-Axmtr bHUYsc rect"
              height="48px"
              width="100%"
            />
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    width="80px"
                  />
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    style={
                      Object {
                        "marginLeft": 4,
                      }
                    }
                    width="80px"
                  />
                </div>
              </div>
            </div>
            <div
              className="sc-Axmtr cudNOq rect"
              height="53px"
              width="100%"
            />
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_2"
        >
          <div
            class="card-body"
          >
            <div
              className="sc-Axmtr cXjICw circle"
              height="136px"
              style={
                Object {
                  "margin": "auto",
                  "marginTop": 48,
                }
              }
              width="136px"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              <div
                className="sc-Axmtr cGrUAy rect"
                height="24px"
                width="100%"
              />
            </h4>
            <p
              className="plan_card_content"
            >
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
            </p>
            <div
              className="sc-Axmtr bHUYsc rect"
              height="48px"
              width="100%"
            />
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    width="80px"
                  />
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    style={
                      Object {
                        "marginLeft": 4,
                      }
                    }
                    width="80px"
                  />
                </div>
              </div>
            </div>
            <div
              className="sc-Axmtr cudNOq rect"
              height="53px"
              width="100%"
            />
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_3"
        >
          <div
            class="card-body"
          >
            <div
              className="sc-Axmtr cXjICw circle"
              height="136px"
              style={
                Object {
                  "margin": "auto",
                  "marginTop": 48,
                }
              }
              width="136px"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              <div
                className="sc-Axmtr cGrUAy rect"
                height="24px"
                width="100%"
              />
            </h4>
            <p
              className="plan_card_content"
            >
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
              <div
                className="sc-Axmtr hiRLud rect"
                height="14px"
                style={
                  Object {
                    "marginBottom": 4,
                  }
                }
                width="100%"
              />
            </p>
            <div
              className="sc-Axmtr bHUYsc rect"
              height="48px"
              width="100%"
            />
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    width="80px"
                  />
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  <div
                    className="sc-Axmtr cqGRfT rect"
                    height="24px"
                    style={
                      Object {
                        "marginLeft": 4,
                      }
                    }
                    width="80px"
                  />
                </div>
              </div>
            </div>
            <div
              className="sc-Axmtr cudNOq rect"
              height="53px"
              width="100%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="background_blue"
  />,
  <div
    className="background_white"
  />,
]
`;

exports[`Pricing page snapshot 3`] = `
Array [
  <div
    className="sc-AxmLO kboaQm mobile"
  >
    <div
      className="sc-AxjAm jhiTqR"
    >
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq stepCompleted completed mobile current whiteBg"
          onClick={[Function]}
        >
          1
        </div>
        <div
          className="sc-AxhCb hUrkqV stepCompleted completed mobile current whiteBg"
          onClick={[Function]}
        >
          Select Plan
        </div>
        <div
          className="sc-AxhUy iRPRoQ stepCompleted completed mobile current whiteBg"
        />
      </div>
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq   mobile  whiteBg"
          onClick={[Function]}
        >
          2
        </div>
        <div
          className="sc-AxhUy iRPRoQ   mobile  whiteBg"
        />
      </div>
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq   mobile  whiteBg"
          onClick={[Function]}
        >
          3
        </div>
        <div
          className="sc-AxhUy iRPRoQ   mobile  whiteBg"
        />
      </div>
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq   mobile  whiteBg"
          onClick={[Function]}
        >
          4
        </div>
      </div>
    </div>
  </div>,
  <div
    className="pricing_content"
  >
    <div
      class="pricing-header px-3 py-3 pb-md-4 mx-auto text-center"
    >
      <h1
        class="simple_fair"
      >
        Simple, fair pricing.
      </h1>
      <p
        class="lead simple_healthy"
      >
        Simple sample sample sample healthy healthy
         
        <span>
          FREE DELIVERY
        </span>
         everyday Simple sample sample sample healthy healthy
      </p>
    </div>
    <div
      class="container"
    >
      <div
        class="card-deck mb-3 text-center"
      >
        <div
          class="card mb-4 shadow-sm pricing_card_1"
        >
          <div
            class="card-body"
          >
            <img
              className="img_1"
              src="svg/eat.svg"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              One Person Plan
            </h4>
            <p
              className="plan_card_content"
            >
              Every meal plan comes with Entrees +Sides+ Fresh jucies one more item you can have
            </p>
            <div
              aria-label="text alignment"
              className="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-label="left aligned"
                aria-pressed={true}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector Mui-selected"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="2"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  2
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="centered"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="3"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  3
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="right aligned"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="4"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  4
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              className="meals"
            >
              Meals
            </span>
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  $90.99 
                  <span>
                    / Meal
                  </span>
                </div>
                <div
                  className="amount_subtext_left"
                >
                  Free Delivery
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  $19.98
                </div>
                <div
                  className="amount_subtext_right"
                >
                  Total
                </div>
              </div>
            </div>
            <button
              class="btn btn-lg btn-block btn-outline-primary card-action"
              className="sc-AxgMl cWmMji  package_button btn btn-primary"
              disabled={false}
              type="button"
            >
              Two Person Plan
               
            </button>
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_2"
        >
          <div
            class="card-body"
          >
            <img
              className="img_2"
              src="svg/eat.svg"
            />
            <h4
              class="my-0 font-weight-normal two_person_h"
            >
              Two Person Plan
            </h4>
            <p
              className="plan_card_content"
            >
              Every meal plan comes with Entrees +Sides+ Fresh jucies one more item you can have
            </p>
            <div
              aria-label="text alignment"
              className="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-label="left aligned"
                aria-pressed={true}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector Mui-selected"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="2"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  2
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="centered"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="3"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  3
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="right aligned"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="4"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  4
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              className="meals"
            >
              Meals
            </span>
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  $90.99 
                  <span>
                    / Meal
                  </span>
                </div>
                <div
                  className="amount_subtext_left"
                >
                  Free Delivery
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  $19.98
                </div>
                <div
                  className="amount_subtext_right"
                >
                  Total
                </div>
              </div>
            </div>
            <button
              class="btn btn-lg btn-block btn-primary card-action"
              className="sc-AxgMl cWmMji  package_button btn btn-primary"
              disabled={false}
              type="button"
            >
              Get started
               
            </button>
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_3"
        >
          <div
            class="card-body"
          >
            <img
              className="img_3"
              src="svg/eat.svg"
            />
            <h4
              class="my-0 font-weight-normal four_person_h"
            >
              Four Person Plan
            </h4>
            <p
              className="plan_card_content"
            >
              Every meal plan comes with Entrees +Sides+ Fresh jucies one more item you can have
            </p>
            <div
              aria-label="text alignment"
              className="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-label="left aligned"
                aria-pressed={true}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector Mui-selected"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="2"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  2
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="centered"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="3"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  3
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="right aligned"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="4"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  4
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              className="meals"
            >
              Meals
            </span>
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  $90.99 
                  <span>
                    / Meal
                  </span>
                </div>
                <div
                  className="amount_subtext_left"
                >
                  Free Delivery
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  $19.98
                </div>
                <div
                  className="amount_subtext_right"
                >
                  Total
                </div>
              </div>
            </div>
            <button
              class="btn btn-lg btn-block btn-primary card-action"
              className="sc-AxgMl cWmMji  package_button btn btn-primary"
              disabled={false}
              type="button"
            >
              Contact us
               
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="background_blue"
  />,
  <div
    className="background_white"
  />,
]
`;

exports[`Pricing page snapshot 4`] = `
Array [
  <div
    className="sc-AxmLO kboaQm"
  >
    <div
      className="sc-AxjAm jhiTqR"
    >
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq stepCompleted completed  current whiteBg"
          onClick={[Function]}
        >
          1
        </div>
        <div
          className="sc-AxhCb hUrkqV stepCompleted completed  current whiteBg"
          onClick={[Function]}
        >
          Select Plan
        </div>
        <div
          className="sc-AxhUy iRPRoQ stepCompleted completed  current whiteBg"
        />
      </div>
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq     whiteBg"
          onClick={[Function]}
        >
          2
        </div>
        <div
          className="sc-AxhCb hUrkqV     whiteBg"
          onClick={[Function]}
        >
          Sign up
        </div>
        <div
          className="sc-AxhUy iRPRoQ     whiteBg"
        />
      </div>
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq     whiteBg"
          onClick={[Function]}
        >
          3
        </div>
        <div
          className="sc-AxhCb hUrkqV     whiteBg"
          onClick={[Function]}
        >
          Checkout
        </div>
        <div
          className="sc-AxhUy iRPRoQ     whiteBg"
        />
      </div>
      <div
        className="sc-AxirZ bnSjNE"
      >
        <div
          className="sc-AxiKw kNTLLq     whiteBg"
          onClick={[Function]}
        >
          4
        </div>
        <div
          className="sc-AxhCb hUrkqV     whiteBg"
          onClick={[Function]}
        >
          Choose your meals
        </div>
      </div>
    </div>
  </div>,
  <div
    className="pricing_content"
  >
    <div
      class="pricing-header px-3 py-3 pb-md-4 mx-auto text-center"
    >
      <h3
        class="keep_it_healthy"
      >
        Keep it healthy
      </h3>
      <h1
        class="simple_fair"
      >
        Simple, fair pricing.
      </h1>
      <p
        class="lead simple_healthy"
      >
        Simple sample sample sample healthy healthy
         
        <span>
          FREE DELIVERY
        </span>
         everyday Simple sample sample sample healthy healthy
      </p>
    </div>
    <div
      class="container"
    >
      <div
        class="card-deck mb-3 text-center"
      >
        <div
          class="card mb-4 shadow-sm pricing_card_1"
        >
          <div
            class="card-body"
          >
            <img
              className="img_1"
              src="svg/eat.svg"
            />
            <h4
              class="my-0 font-weight-normal one_person_h"
            >
              One Person Plan
            </h4>
            <p
              className="plan_card_content"
            >
              Every meal plan comes with Entrees +Sides+ Fresh jucies one more item you can have
            </p>
            <div
              aria-label="text alignment"
              className="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-label="left aligned"
                aria-pressed={true}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector Mui-selected"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="2"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  2
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="centered"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="3"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  3
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="right aligned"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="4"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  4
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              className="meals"
            >
              Meals
            </span>
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  $90.99 
                  <span>
                    / Meal
                  </span>
                </div>
                <div
                  className="amount_subtext_left"
                >
                  Free Delivery
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  $19.98
                </div>
                <div
                  className="amount_subtext_right"
                >
                  Total
                </div>
              </div>
            </div>
            <button
              class="btn btn-lg btn-block btn-outline-primary card-action"
              className="sc-AxgMl cWmMji  package_button btn btn-primary"
              disabled={false}
              type="button"
            >
              Two Person Plan
               
            </button>
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_2"
        >
          <div
            class="card-body"
          >
            <img
              className="img_2"
              src="svg/eat.svg"
            />
            <h4
              class="my-0 font-weight-normal two_person_h"
            >
              Two Person Plan
            </h4>
            <p
              className="plan_card_content"
            >
              Every meal plan comes with Entrees +Sides+ Fresh jucies one more item you can have
            </p>
            <div
              aria-label="text alignment"
              className="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-label="left aligned"
                aria-pressed={true}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector Mui-selected"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="2"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  2
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="centered"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="3"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  3
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="right aligned"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="4"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  4
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              className="meals"
            >
              Meals
            </span>
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  $90.99 
                  <span>
                    / Meal
                  </span>
                </div>
                <div
                  className="amount_subtext_left"
                >
                  Free Delivery
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  $19.98
                </div>
                <div
                  className="amount_subtext_right"
                >
                  Total
                </div>
              </div>
            </div>
            <button
              class="btn btn-lg btn-block btn-primary card-action"
              className="sc-AxgMl cWmMji  package_button btn btn-primary"
              disabled={false}
              type="button"
            >
              Get started
               
            </button>
          </div>
        </div>
        <div
          class="card mb-4 shadow-sm pricing_card_3"
        >
          <div
            class="card-body"
          >
            <img
              className="img_3"
              src="svg/eat.svg"
            />
            <h4
              class="my-0 font-weight-normal four_person_h"
            >
              Four Person Plan
            </h4>
            <p
              className="plan_card_content"
            >
              Every meal plan comes with Entrees +Sides+ Fresh jucies one more item you can have
            </p>
            <div
              aria-label="text alignment"
              className="MuiToggleButtonGroup-root"
              role="group"
            >
              <button
                aria-label="left aligned"
                aria-pressed={true}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector Mui-selected"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="2"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  2
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="centered"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="3"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  3
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                aria-label="right aligned"
                aria-pressed={false}
                className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped qty-selector"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                type="button"
                value="4"
              >
                <span
                  className="MuiToggleButton-label"
                >
                  4
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              className="meals"
            >
              Meals
            </span>
            <div
              className="row per-meal"
            >
              <div
                className="col-6 border_up border_right"
              >
                <div
                  className="amount_left"
                >
                  $90.99 
                  <span>
                    / Meal
                  </span>
                </div>
                <div
                  className="amount_subtext_left"
                >
                  Free Delivery
                </div>
              </div>
              <div
                className="col-6 border_up"
              >
                <div
                  className="amount_right"
                >
                  $19.98
                </div>
                <div
                  className="amount_subtext_right"
                >
                  Total
                </div>
              </div>
            </div>
            <button
              class="btn btn-lg btn-block btn-primary card-action"
              className="sc-AxgMl cWmMji  package_button btn btn-primary"
              disabled={false}
              type="button"
            >
              Contact us
               
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="background_blue"
  />,
  <div
    className="background_white"
  />,
]
`;
